@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-18T16:08:10Z",
-  "count_outdated" : 1409,
-  "uniques_outdated" : 338,
+  "timestamp" : "2023-08-19T16:06:57Z",
+  "count_outdated" : 1430,
+  "uniques_outdated" : 339,
   "count" : 1490,
   "uniques" : 351,
   "views" : [
-    {
-      "timestamp": "2023-08-05T00:00:00Z",
-      "count": 21,
-      "count_minmax": [ 21, 21 ],
-      "count_decinc": [ 0, 21 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-06T00:00:00Z",
       "count": 2,
