@@ -1,12 +1,7 @@
 {
-  "count": 81,
-  "uniques": 13,
+  "count": 60,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2023-08-05T00:00:00Z",
-      "count": 21,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-06T00:00:00Z",
       "count": 2,
