@@ -1,3 +1,12 @@
+2023-08-19T16:06:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5912338414 # 1832
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
+* notice: last 14d: unq all: 12 60
+* notice: prev accum: outdated-unq outdated-all / unq all: 338 1409 / 351 1490
+* notice: next accum: outdated-unq outdated-all / unq all: 339 1430 / 351 1490
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-05] / []
+
 2023-08-18T16:08:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5904726318 # 1829
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-18
